<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_following"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toTopOf="@+id/constraint_layout"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_public_repos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/public_repos"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_followers"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toLeftOf="@+id/tv_public_gists"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/tv_public_gists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/public_gists"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintTop_toBottomOf="@+id/tv_following"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_bio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_public_repos"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_blog_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blog"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_blog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:linksClickable="true"
        android:autoLink="web"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_blog_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_blog"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/tv_hireable_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hireable"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tv_hireable"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hireable_label"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:text="@string/public_repositories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toLeftOf="@+id/constraint_layout"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_hireable"
        android:layout_marginTop="24dp"
        app:layout_constraintRight_toRightOf="@+id/constraint_layout"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp" />
</android.support.constraint.ConstraintLayout>
